# EricTheViking

./: .gitignore  CMakeLists.txt  Config.hpp.in  Config_LibEric.hpp.in  Doxyfile  EricTheViking.sln  EricTheViking.vcxproj  EricTheViking.vcxproj.filters  README.md
Extra/: CMakeLists.txt  raygui.h  raylib-physfs.h
Extra/lua/: CMakeLists.txt
Extra/physfs-3.2.0/include/: physfs.h
Extra/sol/: config.hpp  forward.hpp  sol.hpp
Extra/tinyxml2/: CMakeLists.txt
Extra/zlib/: CMakeLists.txt
Extra/zlib-1.2.13/: libz.lib
cmake/: GenerateVersionHeader.cmake
data/: CMakeLists.txt  FrameworkSettings.lua  Settings.lua  libEric.settings  main.settings
data/Maps/: MainWorld.tmx
data/Maps/MainWorld/: Erik.tiled-session  map.tmx
data/Menu/: Audio.menu  AudioMenu.lua  GameOver.menu  Graphic.menu  GraphicMenu.lua  Main.menu  MainMenu.lua  Pause.menu  PauseMenu.lua  Settings.menu  SettingsMenu.lua
data/assets/: test.lua
data/assets/Player/Animation/: Animation.lua
data/assets/Player/attack/east/: Animation.lua
data/assets/Player/attack/north/: Animation.lua
data/assets/Player/attack/northeast/: Animation.lua
data/assets/Player/attack/northwest/: Animation.lua
data/assets/Player/attack/south/: Animation.lua
data/assets/Player/attack/southeast/: Animation.lua
data/assets/Player/attack/southwest/: Animation.lua
data/assets/Player/attack/west/: Animation.lua
data/assets/Player/hit/east/: Animation.lua
data/assets/Player/hit/north/: Animation.lua
data/assets/Player/hit/northeast/: Animation.lua
data/assets/Player/hit/northwest/: Animation.lua
data/assets/Player/hit/south/: Animation.lua
data/assets/Player/hit/southeast/: Animation.lua
data/assets/Player/hit/southwest/: Animation.lua
data/assets/Player/hit/west/: Animation.lua
data/assets/Player/running/east/: Animation.lua
data/assets/Player/running/north/: Animation.lua
data/assets/Player/running/northeast/: Animation.lua
data/assets/Player/running/northwest/: Animation.lua
data/assets/Player/running/south/: Animation.lua
data/assets/Player/running/southeast/: Animation.lua
data/assets/Player/running/southwest/: Animation.lua
data/assets/Player/running/west/: Animation.lua
data/assets/Player/tippingover/east/: Animation.lua
data/assets/Player/tippingover/north/: Animation.lua
data/assets/Player/tippingover/northeast/: Animation.lua
data/assets/Player/tippingover/northwest/: Animation.lua
data/assets/Player/tippingover/south/: Animation.lua
data/assets/Player/tippingover/southeast/: Animation.lua
data/assets/Player/tippingover/southwest/: Animation.lua
data/assets/Player/tippingover/west/: Animation.lua
data/assets/Player/walking/east/: Animation.lua
data/assets/Player/walking/north/: Animation.lua
data/assets/Player/walking/northeast/: Animation.lua
data/assets/Player/walking/northwest/: Animation.lua
data/assets/Player/walking/south/: Animation.lua
data/assets/Player/walking/southeast/: Animation.lua
data/assets/Player/walking/southwest/: Animation.lua
data/assets/Player/walking/west/: Animation.lua
data/scripts/: test.lua
docs/: CMakeLists.txt  Doxyfile.in
eric/: CMakeLists.txt  Gateway.cpp  Gateway.hpp  Marker.cpp  Marker.hpp  Menu.cpp  Menu.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp  erik.cpp
libEric/: Animation.cpp  Animation.hpp  CMakeLists.txt  CollisionManager.cpp  CollisionManager.hpp  Dialog.cpp  Dialog.hpp  Game.cpp  Game.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameObject_Interface.hpp  GameState.hpp  GameStateFactory.cpp  GameStateFactory.hpp  GameStateMaschine.cpp  GameStateMaschine.hpp  Global_LUA.cpp  GraphicGameObject.cpp  GraphicGameObject.hpp  Input.cpp  Input.hpp  Layer.hpp  LibEric.hpp  LibEric.vcxproj  LibEric.vcxproj.filters  LibEricSettings.cpp  LibEricSettings.hpp  Log.cpp  Log.hpp  Lua.cpp  Lua.hpp  Map.cpp  Map.hpp  MapManager.cpp  MapManager.hpp  MapParser.cpp  MapParser.hpp  (+19 more)
libEric/Graphic/: Animation.cpp  Animation.hpp  Dialog.cpp  Dialog.hpp  GraphicGameObject.cpp  GraphicGameObject.hpp  Menu.cpp  Menu.hpp  RenderManager.cpp  RenderManager.hpp  Sprite.cpp  Sprite.hpp
libEric/Maps/: Layer.hpp  Map.cpp  Map.hpp  MapManager.cpp  MapManager.hpp  MapParser.cpp  MapParser.hpp  ObjectLayer.cpp  ObjectLayer.hpp  TileLayer.cpp  TileLayer.hpp
libEric/core/: CollisionManager.cpp  CollisionManager.hpp  Game.cpp  Game.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameObject_Interface.hpp  GameState.hpp  GameStateFactory.cpp  GameStateFactory.hpp  GameStateMaschine.cpp  GameStateMaschine.hpp  Input.cpp  LibEricApp.cpp  LibEricApp.hpp  LibEricSettings.cpp  LibEricSettings.hpp  LibEric_version.h.in  Linux.cpp  Linux.hpp  Log.cpp  Log.hpp  Lua.cpp  Lua.hpp  UserSettings.cpp  UserSettings.hpp  Windows.cpp  Windows.hpp  base64.h
liberic/: CMakeLists.txt  Dialog.cpp  Game.hpp  GameObject.hpp  GameStateFactory.hpp  Global_LUA.cpp  Global_LUA.hpp  GraphicGameObject.cpp  GraphicGameObject.hpp  Log.cpp  Log.hpp  Map.hpp  MapManager.cpp  MapParser.cpp  MapParser.hpp  ObjectLayer.hpp  PrivateSettings.cpp  PrivateSettings.hpp  StoryNode.cpp  StoryNode.hpp  TextureManager.cpp  TextureManager.hpp  TileLayer.cpp  UserSettings.cpp  UserSettings.hpp  base64.h
