if (WIN32)
    INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/lua-5.4.0/lib/lua54.dll DESTINATION ${PROJECT_BINARY_DIR}/bin )
    INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/physfs-3.2.0/lib/physfs.dll DESTINATION ${PROJECT_BINARY_DIR}/bin )
    INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/raylib-4.2.0/lib/raylib.dll DESTINATION ${PROJECT_BINARY_DIR}/bin )
    INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/zlib-1.2.13/libz.dll DESTINATION ${PROJECT_BINARY_DIR}/bin )
endif ()
