INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/assets  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Menu  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/Maps  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
INSTALL(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/scripts  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking )
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/main.settings DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking/ )
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/libEric.settings DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking/ )
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/Font.ttf  DESTINATION ${CMAKE_INSTALL_PREFIX}/share/EricTheViking/ )
